Fix crash when comparing files with space in path

Add functions to escape/unescape paths extracted from diffs:
 - remove quotes if path is enclosed in quotes (in case of space in path)
 - unescape quotes in path (in case path actually contains quote)
 - unescape double backquotes (not on Windows)

BUG: 340672
REVIEW: 123698